--- a/custom_components/smartify_tv/manifest.json
+++ b/custom_components/smartify_tv/manifest.json
@@ -6,7 +6,7 @@
   "documentation": "",
   "requirements": [],
   "dependencies": [],
-  "codeowners": [],
+  "codeowners": ["@AndrewSimonoff"],
   "iot_class": "local_polling",
   "description": "Smartify Your TV"
 }
